<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tip Caclulator</string>
    <string name="hello_amiel">Hello Amiel!</string>
    <string name="action_settings">Settings</string>
    <string name="bill_hint">Enter your bill here...</string>
    <string name="calculate">Calculate Your Tip</string>
    <string name="tip_low">13%</string>
    <string name="tip_mid">15%</string>
    <string name="tip_high">18%</string>

</resources>
