<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <EditText android:id="@+id/bill"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/bill_hint"
        android:inputType="numberDecimal"/>

    <RadioGroup android:id="@+id/tip_radio"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/bill">

        <RadioButton android:id="@+id/tip_radio_low"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tip_low"
            android:checked="true"/>

        <RadioButton android:id="@+id/tip_radio_mid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tip_mid"/>

        <RadioButton android:id="@+id/tip_radio_high"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tip_high"/>
    </RadioGroup>

    <Button android:id="@+id/calculate_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculate"
        android:layout_below="@id/tip_radio"
        android:layout_alignParentRight="true"
        android:onClick="calculateTip"/>

    <TextView android:id="@+id/display_tip"
        android:layout_below="@id/calculate_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="30dp"
        android:gravity="center"
        android:textSize="20sp"
        />

</RelativeLayout>
